# iniciacion_NLP_LLM

./: README.md  pyproject.toml  req2.txt  requirements.txt
notebook/: 00_Frameworks_Pytorch_vs_Tensorflow.ipynb  00_Introduccion_NLP_casos_de_uso.ipynb  01_Introduccion_NLP_Embeddings_Basicos.ipynb  02_Embeddings_Transformers.ipynb  03_Ingenieria_de_Prompts.ipynb  04_Chatbots_Basicos.ipynb  05_Vectorstores_Retrieval.ipynb  06_Introduccion_RAG.ipynb  07_Reranking_Optimizacion.ipynb  08_Introduccion_Agentes.ipynb  09_Agentes_LangChain.ipynb  10_LangGraph_Flujos.ipynb  11_RAG_Avanzado_Agentico.ipynb  12_Modelos_Contexto_Multimodales.ipynb  chatbot_app.py
notebook/.ipynb_checkpoints/: 02_Embeddings_Transformers-checkpoint.ipynb  03_Ingenieria_de_Prompts-checkpoint.ipynb  04_Chatbots_Basicos-checkpoint.ipynb  05_Vectorstores_Retrieval-checkpoint.ipynb
