[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iniciacion-nlp-llm"
version = "0.1.0"
description = "Curso de LLMs y Aplicaciones de IA"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Docencia", email = ""}
]

dependencies = [
    # Core NLP & Machine Learning
    "numpy==1.26.4",
    "scipy==1.17.0",
    "scikit-learn==1.5.2",
    "gensim==4.3.2",
    "smart_open==6.4.0",
    "spacy",
    
    # Deep Learning Frameworks
    "torch==2.4.1",
    "transformers==4.44.2",
    "sentence-transformers==3.0.1",
    
    # LangChain Ecosystem
    "langchain==0.2.16",
    "langchain-core==0.2.40",
    "langchain-community==0.2.16",
    "langchain-groq==0.1.10",
    "langchain-huggingface==0.0.3",
    "langgraph==0.2.34",
    "python-dotenv==1.0.1",
    
    # Vector Stores & Retrieval
    "faiss-cpu==1.8.0.post1",
    
    # Visualization
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "plotly==5.24.1",
    "umap-learn==0.5.6",
    
    # Data Processing
    "beautifulsoup4==4.12.3",
    "pypdf==4.3.1",
    "pydantic==2.12.5",
    
    # Tokenization & Text Processing
    "tiktoken==0.7.0",
    "ftfy==6.2.3",
    "regex==2026.1.15",
    "tqdm==4.67.2",
    
    # Jupyter & Development
    "jupyter==1.1.1",
    "ipykernel==7.1.0",
    "ipywidgets==8.1.8",
    "notebook==7.5.3",
    "jupyterlab==4.5.3",
    
    # HTTP & Networking
    "httpx==0.28.1",
    "requests==2.32.5",
    "aiohttp==3.13.3",
    
    # Additional dependencies
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = []
