[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iniciacion-nlp-llm"
version = "0.1.0"
description = "Curso de LLMs y Aplicaciones de IA"
readme = "README.md"
requires-python =  ">=3.12,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Francisco Espiga", email = "francisco.espiga.fernandez@gmail.com"}
]

dependencies = [
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
    "transformers>=5.1.0",
    "sentence-transformers>=5.2.2",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tensorflow>=2.20.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "faiss-cpu>=1.13.2",
    "gensim>=4.4.0",
    "umap-learn>=0.5.11",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "plotly>=6.5.2",
    "jupyterlab>=4.5.3",
    "python-dotenv>=1.2.1",
    "beautifulsoup4>=4.14.3",
    "pypdf>=6.7.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85",
    "es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl#sha256=e451a83d6df79b87e9eed0cb553f03e99e36a3bab18a7b79f0dcfd1fdf875e12",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = []
